...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome Completo" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="X6B-xC-ukb">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="qKA-ag-LUK">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Telefone" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="rSp-qs-hAP" customClass="VSTextField" customModule="VSTextField">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Nome Fantasia" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="m9d-89-zJs">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="CNPJ" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="Lwg-i9-K4N" customClass="VSTextField" customModule="VSTextField">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <textField opaque="NO" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Data de Ativação" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="cnG-tI-TpY">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <nil key="textColor"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Steve Jobs" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kjF-V4-4MG">
                                                    <rect key="frame" x="10" y="5" width="355" height="40"/>
                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
...
                        <outlet property="cnpjLabel" destination="vEA-bJ-W1G" id="f64-Ya-wX9"/>
                        <outlet property="companyNameLabel" destination="WhD-Vh-LZL" id="Saf-kn-5ee"/>
                        <outlet property="deleteCompanyButton" destination="asO-33-tig" id="YB6-Qq-jbv"/>
                        <outlet property="emailLabel" destination="VqY-Hs-NvS" id="tt9-WW-hoc"/>
                        <outlet property="isMeiLabel" destination="4FG-8z-y0G" id="L6i-4C-GoD"/>
...
