...


// MARK: - Actions

extension DetailCompanyTableViewController {
    @IBAction func deleteButtonPressed(_ sender: UIBarButtonItem) {
        let alert = UIAlertController(title: "Apagar", message: "Você está certo disso?\nEsta ação não pode ser desfeita.", preferredStyle: .alert)
        
        let yesButton = UIAlertAction(title: "SIM", style: .destructive) { _ in
            if self.viewModel.delete(self.presentation) {
                self.navigationController?.popViewController(animated: true)
            } else {
                self.showErrorAlert()
            }
        }
...
